Table Organizer {
  Event_Year int [pk, ref: > Event.Year]
  Person_Email varchar(32) [pk, ref: > Person.Email]
  Roles varchar(512) [not null, note: 'Comma-separated list of responsibilities']

  Note: 'Tracks the roles of the madiSTEM organizers by year (M-N with event).'
}

Table Person {
  Email varchar(32) [pk, note: 'Use email as the unique identifier for all people']
  Type varchar(32) [not null, note: 'Ex: student, faculty, other']
  FirstName varchar(32) [not null]
  LastName varchar(32) [not null]
  Phone varchar(16)
  Department_Code varchar(8) [not null, ref: > Department.Code]

  Note: 'The super class entity for all types of people, with their basic information.'
}

Table Department {
  Code varchar(8) [pk, note: 'Ex: CS']
  Name varchar(64) [not null]
  AUHFullName varchar(32) [not null]
  AUHEmail varchar(32) [not null]
  College_Code varchar(8) [not null, ref: > College.Code]

  Note: 'Needed for name lookups and thank-you emails.'
}

Table College {
  Code varchar(8) [pk, note: 'Ex: CISE']
  Name varchar(64) [not null]
  DeanFullName varchar(32) [not null]
  DeanEmail varchar(32) [not null]
  DeanFirstName varchar(32) [not null]

  Note: 'Needed for name lookups and thank-you emails.'
}

Table Event {
  Year int [pk, note: 'One event per year']
  Date date [not null, note: 'The exact date of the event']

  Note: 'More attributes to be added later: guest speaker, theme, etc.'
}

Table Person_Workshop {
  Person_Email varchar(32) [pk, ref: > Person.Email]
  Workshop_ID int [pk, ref: > Workshop.ID]
  Role varchar(32) [not null, note: 'Ex: organizer, volunteer']

  Note: 'Connects a person to a workshop with a specific role.'
}

Table Workshop {
  ID int [pk, increment, note: 'Generated auto-increment ID because the title may be edited over time.  This ID is unique across years.']
  State varchar(32) [not null, note: 'The state of the workshop -- proposed, accepted, file, etc.  The exact states are not fully defined.']
  Title varchar(64) [not null]
  Advertisement varchar(512) [note: 'The workshop description to be shown on the website.']
  Description varchar(1024) [note: 'The full description of the workshop maybe with much more detail than the advertisement.']
  Capacity int [note: 'The max number of students that can be accommodated in this workshop.']
  ComputerNeeds varchar(128)
  RoomNeeds varchar(128)
  MaxRepeat int [note: 'The number of times this workshop can be offered during the day.']
  ParentQuestions varchar(1024) [note: 'Follow-up information/questions for the attendee to share with their parents post event.']
  OtherInformation varchar(512) [note: 'Any other information about the workshop to be shared with the organizers.']
  Event_Year int [not null, ref: > Event.Year, note: 'Not part of the key, but required.']
  Room_Name varchar(32) [ref: > Room.Name, note: 'The room is assigned later in the process, so it can be null.']

  Note: 'Holds all the workshop information.'
}

Table Room {
  Name varchar(32) [pk, note: 'The short name of the room, like King 250']
  Type varchar(32) [not null, note: 'Ex: classroom, lab']
  Capacity int [not null]
  Notes varchar(64)

  Note: 'Rooms on campus that may be used by madiSTEM.'
}

Table TimeSlot {
  Event_Year int [pk, ref: > Event.Year]
  ID int [pk, note: 'The slots are numbered 1..N from earliest to latest']
  Name varchar(32) [not null, note: 'Ex: registration, lunch, speaker, workshops']
  BegTime time [not null]
  EndTime time [not null]

  Note: 'An event is divided into time slots -- these are the schedule for the day.'
}

Table Workshop_TimeSlot {
  Workshop_ID int [pk, ref: > Workshop.ID]
  TimeSlot_Event_Year int [pk]
  TimeSlot_ID int [pk]

  Note: 'Connects the workshop to slot M-N, because many workshops can be scheduled in the same slot.'
}

Ref: Workshop_TimeSlot.(TimeSlot_Event_Year, TimeSlot_ID) > TimeSlot.(Event_Year, ID)

Table Room_Feature {
  Room_Name varchar(32) [pk, ref: > Room.Name]
  Feature_Name varchar(32) [pk, ref: > Feature.Name]

  Note: 'M-N connection between room and features (see https://www.lib.jmu.edu/tech-classrooms/).'
}

Table Feature {
  Name varchar(32) [pk]
  Description varchar(128)

  Note: 'Just to lookup some features like sink, computers, projector, etc.'
}
